# Basketball_System

./: README.md  pyproject.toml
configs/: agents.yaml  memory.yaml  model.yaml  rag.yaml
data/: kb.sqlite3  ltm.sqlite3
data/knowledge/: Posture.txt  README.txt  shooting_basics.txt  train_method.txt  training_faq.txt
docs/: ARCHITECTURE_V2.md  TECHNICAL_OVERVIEW.md
oldcode/: model  train.py
tests/: test_baseline_agent.py  test_preprocess.py
