[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shootcoach"
version = "0.1.0"
description = "Basketball shot scoring — pose pipeline, LSTM, scoring API"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "tensorflow>=2.14",
  "fastapi>=0.109",
  "uvicorn[standard]>=0.27",
  "pyyaml>=6",
  "pydantic>=2",
  "redis>=5.0",
  "httpx>=0.27",
]

[project.scripts]
shootcoach-api = "apps.api.main:main"
shootcoach-train = "models_dl.train:main"
shootcoach-ingest-kb = "agents.baseline.kb_ingest:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
pythonpath = ["packages"]
testpaths = ["tests"]
